# usb-test

./: Cargo.toml
.cargo/: Config.toml
src/: main.rs  vendors.rs
